demo/setup/stage0/platform.allow-kube-dns.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: platform.allow-kube-dns
spec:
  tier: platform
  order: 200
  selector: projectcalico.org/namespace != "acme"
  egress:
    - action: Allow
      source: {}
      destination:
        selector: k8s-app == "kube-dns"
  types:
    - Egress
