demo/setup/stage0/platform.logging.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: platform.logging
spec:
  tier: platform
  order: 0
  selector: app == "logging"
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: has(fw-zone)
      destination:
        ports:
          - '8080'
  doNotTrack: false
  applyOnForward: false
  preDNAT: false
  types:
    - Ingress
